--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="ca">
-<head>
-  <meta charset="UTF-8">
-  <title>PVD Enginyeria</title>
-</head>
-<body>
-  <h1>PVD Enginyeria</h1>
-  <p>Benvingut a la web. <a href="/admin/">Entra a l'administrador</a></p>
-</body>
+
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Admin</title>
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  </head>
+  <body>
+    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+  </body>
 </html>
